    + Fix bad warning on unexistent project and downgrade messages to debug
      level.
    + Add libgitlab-api-v4-perl and libtest-output-perl in build dependencies
      and debian/tests/control to enable the salsa unit tests at build time.
      MR: !94
    + Add a --ci-config-path option.  MR: !96
    + push_repo: allow to push even if the project already exists.  MR: !97
  * uscan:
    + Fix warning when grouped package is up to date.
  * French translation update.

  [ Benjamin Drung ]
  * wrap-and-sort:
    + Also sort debian/tests/control.

 -- Mattia Rizzolo <mattia@debian.org>  Fri, 07 Dec 2018 19:49:34 +0100

devscripts (2.18.11) experimental; urgency=medium

  [ Xavier Guimard ]
  * Devscripts::Config:
    + Support a new --conf-file option to add extra configuration files.
  * Devscripts::Output:
    + Add a new ds_prompt() function.
  * Add Devscripts::JSONCache, Perl object cache library to store values.
  * salsa: new tool to manage salsa.debian.org repositories with:
    + commands to manage users in salsa groups,
    + commands to contribute (create fork and merge_request),
    + commands to manage repositories: configure project description, KGB
      webhook, tagpending webhook, Irker, Email-on-push, default HEAD (i.e.
      from the default "master" to "debian/master" for DEP-14 migrations).
  * Closes: #890594; MR: !70

 -- Mattia Rizzolo <mattia@debian.org>  Wed, 05 Dec 2018 18:49:57 +0100

devscripts (2.18.10) unstable; urgency=medium

  [ Daniel Kahn Gillmor ]
  * uscan:
    + Use gpgv instead of gpg for git tag verification.  MR: !82

  [ Emilio Pozuelo Monfort ]
  * uscan:
    + Fix mkorigtargz for watch version 4 with non-default destdir
      and a defined action.  MR: !83

  [ Xavier Guimard ]
  * uscan:
    + Change "group" version build: version is the grouping of each component
      version after mk-origtargz changes (i.e. a repack suffix can be added to
      each component separately).  MR: !84