@@ -22,6 +22,7 @@ devscripts (2.18.12) UNRELEASED; urgency=medium
       MR: !94
     + Add a --ci-config-path option.  MR: !96
     + push_repo: allow to push even if the project already exists.  MR: !97
+    + Skip project in update_repo if hooks are not available.
   * uscan:
     + Fix warning when grouped package is up to date.
   * French translation update.
